syntax = "proto3";

package apprunner;

option go_package = "waypoint/builtin/aws/apprunner";

import "opaqueany/any.proto";


// When creating a service, App runner automatically starts a deployment, so the
// Waypoint deploy lifecycle effectively encompasses the 
// enum DeploymentType {
//   CREATE = 0;
//   UPDATE = 1;
// }

message Deployment {
  // Identifier for the deployment, required by Waypoint
  string id = 1;

  // The AWS region the App Runner service is deployed to
  // This is limited to us-east-1, us-east-2, us-west-2, ap-northest-1, eu-west-1
  // - see https://docs.aws.amazon.com/general/latest/gr/apprunner.html
  string region = 2;

  // A name for the App Runner service. It must be unique across
  // all the running App Runner services in your Amazon Web Services account in the Amazon Web Services Region.
  string service_name = 3;

  // The ARN for the App Runner service
  string service_arn = 4;

  // The default domain provided by App Runner
  string service_url = 5;

  // The current state of the App Runner service.
  string status = 6;

  // The Deploy lifecycle will either CreateService (new) 
  // or UpdateService (existing); Both will provide an OperationId.
  //
  // OperationId can be passed to the following Release lifecycle,
  // which can wait/poll the operation status, as well as see the
  // operation type, like CREATE_SERVICE or ____
  string operation_id = 7;
}



message Release {
  string url = 1;
  string region = 2;
  string service_name = 3;
  string service_arn = 4;
}



